# network-speed

./: .gitignore  .prettierrc.toml  BUILD.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCS.md  README.md  test.bat
docs/: DOCS.md  README.md
examples/: monitor.rs
src/: lib.rs  main.rs
src/monitor/: async_monitor.rs  interface.rs  mod.rs  sync_monitor.rs
src/types/: config.rs  error.rs  mod.rs  speed.rs
tests/: integration_tests.rs  monitor_tests.rs  unit_tests.rs
